Fixed color of names of items in inventory in dark mode

--- a/public/stylesheets/inventory.css
+++ b/public/stylesheets/inventory.css
@@ -34,6 +34,9 @@
 .inventory-table tbody tr:last-of-type {
   border-bottom: 1px solid var(--yellow);
 }
+tbody tr {
+  color: var(--black);
+}
 
 /* editable */
 /* .inventory-table tbody tr:active {
